--- a/static/css/uikit.css
+++ b/static/css/uikit.css
@@ -2,6 +2,7 @@
    Component: Base
  ========================================================================== */
 /*
+ Editor : Borann
  * 1. Set `font-size` to support `rem` units
  *    Not using `font` property because a leading hyphen (e.g. -apple-system) causes the font to break in IE11 and Edge
  * 2. Prevent adjustments of font size after orientation changes in IE and iOS.
