--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,37 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Sport</title>
+    <link rel="stylesheet" href="{% static 'css/uikit.min.css'%}">
+    <link rel="stylesheet" href="{% static 'css/theme.min.css' %}">
+
+    <script src="{% static 'js/jquery.js' %}"></script>
+    <script src="{% static 'js/uikit.min.js' %}"></script>
+
+    <!-- HTML5 Shiv and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
 <body>
+    <div>
+        {% block content %}
+
+        {% endblock %}
+    </div>
+
+    {% block model_login %}
+
+    {% endblock %}
 
 </body>
 </html>
